samples/_failures_safe/1761143683_621bea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d39cd4e.c: In function ‘main’:
./samples/SAFE/__tmp_9d39cd4e.c:178:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  178 |     TokenHandler handlers
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_9d39cd4e.c:178:5: error: expected declaration or statement at end of input
